--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
