--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage --runInBand --detectOpenHandles --forceExit",
-    "build": "tsc --build",
+    "build": "tsc --build && npm run copy-files",
     "start": "node ./dist/index.js",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "copy-files": "copyfiles -u 1 ./src/CourseImage/**/* ./dist"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "@types/node": "^20.14.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
